# trackball

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
hardware/3d/: Module - Module Mount.step  Trackball Base - Ball Mount.step  Trackball Base - Корпус v5.step
hardware/3d/horizontal/: OLED Cover.stl  Trackball Base - Buttons Mount v4.step  Trackball Base - PCB Case.step  Trackball Base - PCB spacer.step
hardware/3d/vertical/: Vertical - Ball Holder.step  Vertical - Bottom.step  Vertical - Clickers Holder.step  Vertical - Cover.step  Vertical - Wall cover.step
hardware/pcb/gerber/: Drill_PTH_Through.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL
main/: .clang-format  CMakeLists.txt  Kconfig.projbuild  app.cpp  app.h  app_events.h  ble_init.c  ble_init.h  button.cpp  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_device_le_prf.c  hidd_le_prf_int.h  main.cpp  paw3395.cpp  paw3395.h  pins.h  types.h  ui.cpp  ui.h
main/battery/: battery.cpp  battery.h
main/ble/: esp_hidd_prf_api.c  hidd_le_prf_int.h
main/button/: button.cpp  button.h
main/images/: build_images.sh  images.c
main/led/: esp_led.cpp  esp_led.h
main/nimble/: ble_func.c  gatt_svr.c  gatt_svr.h  gatt_vars.c  hid_func.c  hid_func.h  svc_dis.h
main/oled/: ssd1306.c  ssd1306.h
main/paw3395/: paw3395.cpp  paw3395.h
main/timer/: timer.h
